public/CSS/base.css
/* FONTS */
@import url('https://fonts.googleapis.com/css?family=Nunito:700');
@import url('https://fonts.googleapis.com/css?family=Roboto:400,500');

/* HEADER */

#header-main {
    background-color: #FFF;
    height: 70px;
    margin-bottom: 9.5em;
}

/* Nav */

#logo-nav {
    margin-left: 0;
    margin-right: 0;
    padding: 7px 0 0 20px;
}

#div-nav {
    padding-left: 40px;
}

#nav > h5, .nav-link {
    display: inline-block;
    margin-right: 50px;
    padding-top: 29px;
}

.nav-link:hover {
    color: #547D87 !important;
}

#nav > h5 > a, footer h5, #copyright, .nav-link {
    color: #68C1DD !important;
}

.navbar {
    padding: 0;
}

#copyright {
    margin-right: 15px;
}

/* CONTENT */

body {
    font-size: 16px;
    background-color: #FCFCFC;
}

#left {
    float: left;
}

/* Blocks */

.container-fluid header {
    margin-bottom: 8em;
}

.margin-auto {
    margin: auto;
}

.page-content {
    width: 60em;
}

.block160 {
    margin-top: 10em !important;
}

.no-padding {
    padding-right: 0;
    padding-left: 0;
}

.white {
    background: #FFF;
    /*margin: 0.2em;*/
    border: 1px solid #FFF;
}

.white p, h6, a {
    margin: 0.5em;
}

.white img {
    border-top-left-radius: 5px;
    border-top-right-radius: 5px;
}

.pack {
    padding-top: 20px;
    padding-bottom: 20px;
    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.2);
}

.block-decal:nth-child(3n), .block-decal:nth-child(4n) {
    margin-top: 10%;
}

.center {
    text-align: center;
}

.space {
    margin-top: 3.5em;
}

/* Titles */

h1 {
    font-family: "Nunito", sans-serif;
    font-size: 2.25em;
    font-weight: 600;
    line-height: normal;
    letter-spacing: normal;
    color: #68C1DD;
}

h2 {
    font-family: "Roboto", sans-serif;
    font-size: 1.75em;
    font-weight: 400;
    line-height: normal;
    letter-spacing: 0.007em;
    color: #373737;
    margin-bottom: 1.5em;
}

h3 {
    font-family: "Roboto", sans-serif;
    font-size: 1.75em;
    font-weight: 400;
    line-height: normal;
    letter-spacing: 0.007em;
    color: #FCFCFC;
}

h4 {
    font-family: "Roboto", sans-serif;
    font-size: 1.25em;
    font-weight: 400;
    line-height: 1.25em;
    letter-spacing: 0.013em;
    color: #CC0056;
    margin-bottom: 2.5em;
}

h5, .nav-link {
    font-family: "Roboto", sans-serif;
    font-size: 0.75em;
    text-transform: uppercase;
    font-weight: 400;
    line-height: normal;
    letter-spacing: 0.15em;
    color: #373737;
}

img + h5 {
    margin-top: 2em;
}

/* Paragraphs*/

p.envaleur {
    font-family: "Roboto", sans-serif;
    font-size: 1em;
    font-weight: normal;
    line-height: 1.75em;
    letter-spacing: 0.03em;
    color: #373737;
}

p {
    font-family: "Roboto", sans-serif;
    font-size: 0.875em;
    font-weight: normal;
    line-height: 1.25em;
    letter-spacing: 0.017em;
    color: #373737;
}

/* Links */

a.link1 {
    font-family: "Roboto", sans-serif;
    font-weight: 500;
    font-size: 0.875em;
    line-height: 1.75em;
    letter-spacing: 0.09em;
    text-transform: uppercase;
    color: #CC0056;
}

a.link2 {
    font-family: "Roboto", sans-serif;
    font-weight: 400;
    letter-spacing: 0.09em;
    color: #CC0056;
}

a.link3 {
    font-family: "Roboto", sans-serif;
    font-weight: 500;
    font-size: 0.875em;
    line-height: auto;
    letter-spacing: 0.09em;
    text-transform: uppercase;
    color: #68C1DD;
}

/* Images */

.img-round {
    border-radius: 8px;
}

img.ronde {
    height: 100px;
    width: 100px;
    border-radius: 50px;
}

img.about {
    float: left;
    margin-right: 30px;
    height: 200px;
    width: 200px;
}

.social {
    height: 16px;
    width: 16px;
    margin-right: 15px;
}

img.h1 {
    height: 30px;
    width: 30px;
    margin-right: 15px;
    margin-top: 8px;
    display: inline-block;
}

.svg-padding {
    margin-right: 15px;
}

.svg100 {
    width: 100px;
}

/* Buttons */

button:not(.navbar-toggler) {
    background-image: linear-gradient(to right, #FF5E60 0%, #CC0056 100%);
    border-radius: 8px;
    height: 50px;
    min-width: 130px;
    font-family: "Nunito", sans-serif;
    font-weight: 400;
    font-size: 0.875em;
    letter-spacing: 0.09em;
    text-transform: uppercase;
    color: #FCFCFC;
    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.2);
    -webkit-transition-duration: 0.4s;
    transition-duration: 0.4s;
    padding: 0 2em;
    border-width: 0;
    margin-top: 3.5em;
    cursor: pointer;
}

button:not(.navbar-toggler):hover {
    background-image: linear-gradient(to right, #68C1DD 0%, #68C1DD 100%);
    color: #373737;
    font-weight: bold;
}

button.navbar-toggler {
    margin: 8px 0 0 0;
    position: relative;
    left: 80%;
}

/* Tables */
table {
    margin: auto
}

/* Forms*/
input {
    height: 50px;
    margin-bottom: 30px;
}

input, textarea {
    width: 100%;
    border: solid 1px rgba(0, 0, 0, 0.5);
    border-radius: 3px;
    background-color: #FCFCFC;
    padding-left: 10px;
}

/* Flash message*/

.flash-notice {
    color: #398F31;
    background-color: #D9F7E1;
    border-color: #BCF1C8;
    padding: 15px;
    margin-bottom: 20px;
    border: 1px solid transparent;
    border-radius: 4px;
}

/* BOTTOM PAGE */

#pre-footer {
    background: url("../images/pre-footer.jpg") no-repeat #547D87;
    background-size: cover;
    height: 24em;
    margin-top: 10em;
    color: #FFF;
}

#pre-footer h2, #pre-footer p {
    color: #FCFCFC;
}

/* FOOTER */

footer {

    padding-top: 20px;
    background-color: #373737;
    color: #FFF;
}

footer p {
    color: #FFF
}

footer ul {
    list-style-type: none;
}

footer li {
    margin-right: 15px;
}

footer nav {
    width: 100%;
}

nav a {
    text-decoration: none;
    color: #FFF;
}

footer nav a:hover, .tel:hover {
    text-decoration: none;
    color: #68C1DD;
}

.br {
    margin-bottom: 20px;
}

.tel {
    text-decoration: none;
    color: #FFF;
}

footer > div {
    padding-left: 20px !important;
}

/* MEDIA QUERIES */

@media handheld and (max-width: 500px) {
    .block-first {
        margin-bottom: 1em !important;
    }
}

@media screen and (min-width: 501px) {
    .block-first {
        height: 24em;
        margin-bottom: 16em;
    }
}

@media screen and (min-width: 768px) {
    .block-decal:nth-child(2n), .block-decal:nth-child(4n) {
        top: 10%;
    }
}

@media screen and (max-width: 767px) {
    .block-decal:nth-child(2n), .block-decal:nth-child(4n) {
        top: 0;
    }

    .block-decal:nth-child(2n) {
        margin-top: 10%;
    }
    .title_article h1{
        margin-top: 150px;
    }
    .title_article h1, h2{
        font-size: 1.2em;
    }
}

@media screen and (max-width: 990px) {
    .display_desktop {
        display: none;
        width: 20px;
    }

    .page-content {
        width: auto;
    }

    /* Navbar */
    .navbar {
        background: #FFF;
    }

    #header-main {
        height: auto;
    }

    .nav-link {
        font-family: "Roboto", sans-serif;
        font-size: 1em;
        font-weight: normal;
        line-height: 1.75em;
        letter-spacing: 0.03em;
        color: #373737;
    }

    .social {
        height: 20px;
        width: 20px;
    }

    /* Images */
    .svg {
        margin-top: 4em;
        margin-bottom: 1.5em;
    }
}

@media screen and (min-width: 991px) {
    .display_mobile {
        display: none;
        height: 200px;
    }

    .navbar-expand-lg .navbar-nav .nav-link {
        padding-right: 0;
        padding-left: 0;
    }

}

@media screen and (max-width: 1282px) {
    .nav-link {
        margin-right: 15px;
    }

}

@media screen and (min-width: 200px) {
    .background_article {
        background-image: url("../images/article-fili-578.jpg");
        background-repeat: no-repeat;
        background-size: cover;
        filter: alpha(opacity=50);
        opacity: 0.2;
        -moz-opacity: 0.5;
        padding-top: 15em;
        position: relative;
        bottom: 150px;
    }

    .title_article {
        position: relative;
        bottom: 500px;
        height: 10px;
        margin-bottom: 0px;
    }

    .title_article h2 {
        margin-bottom: 0px;
    }

}

@media screen and (min-width: 760px) {
    .background_article {
        background-image: url("../images/article-fili-990.jpg");
        background-repeat: no-repeat;
        background-size: cover;
        filter: alpha(opacity=50);
        opacity: 0.2;
        -moz-opacity: 0.5;
        padding-top: 25em;
        position: relative;
        bottom: 150px;
    }

}

@media screen and (min-width: 991px) {
    .background_article {
        background-image: url("../images/article-fili-1980.jpg");
        background-repeat: no-repeat;
        background-size: cover;
        filter: alpha(opacity=50);
        opacity: 0.2;
        -moz-opacity: 0.5;
        padding-top: 40em;
        position: relative;
        bottom: 150px;
        margin-right: 0;
    }

}

